Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71128

crashes on proxy authentication request

    XMLWordPrintable

Details

    • 267dd7fa09855bd0b8dedf7edcb126e034d8e1f8 (qt/qtwebengine/5.11)

    Description

      1   QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt::url                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   resource_dispatcher_host_delegate_qt.cpp 88   0x7fffe96c481a 
      2   QtWebEngineCore::AuthenticationDialogController::url                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          authentication_dialog_controller.cpp     71   0x7fffe9642a3e 
      3   QWebEnginePagePrivate::authenticationRequired                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 qwebenginepage.cpp                       536  0x7ffff7fc991c 
      4   QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt::triggerDialog(base::RepeatingCallback<content::WebContents * ()> const&)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              resource_dispatcher_host_delegate_qt.cpp 117  0x7fffe96c4c06 
      5   base::internal::FunctorTraits<void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: *)(base::RepeatingCallback<content::WebContents * ()> const&), void>::Invoke<scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt> const&, base::RepeatingCallback<content::WebContents * ()> const&>(void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: *)(base::RepeatingCallback<content::WebContents * ()> const&), scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt> const&, base::RepeatingCallback<content::WebContents * ()> const&)                                                                                                                                                                                                                                                                                                                                                                     bind_internal.h                          211  0x7fffe96c5763 
      6   base::internal::InvokeHelper<false, void>::MakeItSo<void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: * const&)(base::RepeatingCallback<content::WebContents * ()> const&), scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt> const&, base::RepeatingCallback<content::WebContents * ()> const&>(void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: * const&)(base::RepeatingCallback<content::WebContents * ()> const&), scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt> const&, base::RepeatingCallback<content::WebContents * ()> const&)                                                                                                                                                                                                                                                                                                                                               bind_internal.h                          294  0x7fffe96c5763 
      7   base::internal::Invoker<base::internal::BindState<void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: *)(base::RepeatingCallback<content::WebContents * ()> const&), scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt>, base::RepeatingCallback<content::WebContents * ()>>, void ()>::RunImpl<void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: * const&)(base::RepeatingCallback<content::WebContents * ()> const&), std::tuple<scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt>, base::RepeatingCallback<content::WebContents * ()>> const&, 0ul, 1ul>(void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: * const&)(base::RepeatingCallback<content::WebContents * ()> const&), std::tuple<scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt>, base::RepeatingCallback<content::WebContents * ()>> const&, std::integer_sequence<unsigned long, 0ul, 1ul>) bind_internal.h                          368  0x7fffe96c5763 
      8   base::internal::Invoker<base::internal::BindState<void (QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt:: *)(base::RepeatingCallback<content::WebContents * ()> const&), scoped_refptr<QtWebEngineCore::ResourceDispatcherHostLoginDelegateQt>, base::RepeatingCallback<content::WebContents * ()>>, void ()>::Run(base::internal::BindStateBase *)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    bind_internal.h                          350  0x7fffe96c5763 
      9   base::OnceCallback<void ()>::Run() &&                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         callback.h                               65   0x7fffe970cc1e 
      10  base::debug::TaskAnnotator::RunTask                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           task_annotator.cc                        55   0x7fffed176567 
      11  base::internal::IncomingTaskQueue::RunTask                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    incoming_task_queue.cc                   124  0x7fffed1cfd7c 
      12  base::MessageLoop::RunTask                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    message_loop.cc                          399  0x7fffed1d4072 
      13  base::MessageLoop::DeferOrRunPendingTask                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      message_loop.cc                          411  0x7fffed1d41f8 
      14  base::MessageLoop::DoWork                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     message_loop.cc                          455  0x7fffed1d4527 
      15  QtWebEngineCore::(anonymous namespace)::MessagePumpForUIQt::handleScheduledWork                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               content_browser_client_qt.cpp            233  0x7fffe965ebd8 
      16  QtWebEngineCore::(anonymous namespace)::MessagePumpForUIQt::customEvent                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       content_browser_client_qt.cpp            215  0x7fffe965ebd8 
      17  QObject::event                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                qobject.cpp                              1273 0x7fffe6b6b7c6 
      18  QApplicationPrivate::notify_helper                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            qapplication.cpp                         3727 0x7fffe7b83293 
      19  QApplication::notify                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          qapplication.cpp                         3099 0x7fffe7b8aae0 
      20  QCoreApplication::notifyInternal2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             qcoreapplication.cpp                     1048 0x7fffe6b3909f 
      ... <More>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
      

      Attachments

        For Gerrit Dashboard: QTBUG-71128
        # Subject Branch Project Status CR V

        Activity

          People

            michal Michal Klocek
            michal Michal Klocek
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes